<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="*"
    android:background="#000000"
    tools:context="bryan.dingmanlab3app2.MainActivity">

    <!-- ROW 1 -->
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="2dp">

        <TextView
            android:layout_height="fill_parent"
            android:layout_span="4"
            android:text="@string/display"
            android:gravity="right|center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorResult"
            android:layout_marginRight="2dp"/>
    </TableRow>

    <!-- ROW 2 -->
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="2dp">
        <Button
            android:layout_height="fill_parent"
            android:layout_span="2"
            android:text="@string/clear"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorClear"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/mod"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/divide"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
    </TableRow>

    <!-- ROW 3 -->
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="2dp">
        <Button
            android:layout_height="fill_parent"
            android:text="@string/seven"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/eight"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/nine"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/multiply"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
    </TableRow>

    <!-- ROW 4 -->
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="2dp">
        <Button
            android:layout_height="fill_parent"
            android:text="@string/four"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/five"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/six"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/minus"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
    </TableRow>

    <!-- ROW 5 -->
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="2dp">
        <Button
            android:layout_height="fill_parent"
            android:text="@string/one"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/two"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/three"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_height="fill_parent"
            android:text="@string/plus"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
    </TableRow>

    <!-- ROW 6 -->
    <TableRow
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="2dp">
        <Button
            android:layout_height="fill_parent"
            android:text="@string/zero"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorOther"
            android:layout_marginRight="2dp"/>
        <Button
            android:layout_span="3"
            android:layout_height="fill_parent"
            android:text="@string/equals"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@color/colorEquals"
            android:layout_marginRight="2dp"/>
    </TableRow>
</TableLayout>
